--- a/Dockerfile-debian.template
+++ b/Dockerfile-debian.template
@@ -1,3 +1,10 @@
+ARG PHP_VERSION=%%PHP_VERSION%%
+ARG PHP_VARIANT=%%VARIANT%%
+
+# Set vars for s6 overlay
+ARG S6_OVERLAY_VERSION=v2.2.0.3
+ARG S6_OVERLAY_BASE_URL=https://github.com/just-containers/s6-overlay/releases/download/${S6_OVERLAY_VERSION}
+
 # Multi-stage build - See https://docs.docker.com/engine/userguide/eng-image/multistage-build
 
 FROM antonmeep/dmd as dmd
@@ -15,10 +22,24 @@ RUN apt-get update \
   && make \
   && make install
 
+FROM php:${PHP_VERSION}-${PHP_VARIANT} as php-armv7
 
+ARG S6_OVERLAY_VERSION
+ARG S6_OVERLAY_BASE_URL
+ENV S6_OVERLAY_RELEASE="${S6_OVERLAY_BASE_URL}/s6-overlay-arm.tar.gz"
 
+FROM php:${PHP_VERSION}-${PHP_VARIANT} as php-amd64
 
-FROM php:%%PHP_VERSION%%-%%VARIANT%%
+ARG S6_OVERLAY_VERSION
+ARG S6_OVERLAY_BASE_URL
+ENV S6_OVERLAY_RELEASE="${S6_OVERLAY_BASE_URL}/s6-overlay-amd64.tar.gz"
+
+FROM php-${TARGETARCH:-amd64}${TARGETVARIANT}
+
+ADD ${S6_OVERLAY_RELEASE} /tmp/s6overlay.tar.gz
+
+RUN set -eux; \
+    tar xzf /tmp/s6overlay.tar.gz -C / 
 
 # System dependencies
 RUN set -eux; \
@@ -30,6 +51,7 @@ RUN set -eux; \
 		imagemagick \
 		# Required for SyntaxHighlighting
 		python3 \
+		cron \
 	; \
 	rm -rf /var/lib/apt/lists/*
 
@@ -142,16 +164,11 @@ RUN curl -s -o /tmp/skin-minervaneue.tar.gz https://extdist.wmflabs.org/dist/ski
     tar -xzf /tmp/skin-minervaneue.tar.gz -C /var/www/html/skins && \
     rm /tmp/skin-minervaneue.tar.gz
 
-COPY config/mediawiki/* /var/www/html/
-COPY docker-entrypoint-debian.sh /docker-entrypoint.sh
+COPY --chown=www-data:www-data overlay/common/www-data/ /
+
+COPY overlay/common/root/ /
+COPY overlay/debian/root/ /
 
 COPY --from=dmd /usr/local/bin/onedrive /usr/local/bin/onedrive
-RUN set -eux; \
-	mkdir -p ~/.config/; \
-	mkdir -p ~/OneDrive/MediawikiBackup; \
-	mkdir -p /var/log/onedrive; \
-	ln -s /var/www/data ~/OneDrive/MediawikiBackup/data
 
-COPY config/onedrive/* /root/.config/onedrive/
-
-ENTRYPOINT ["%%CMD%%"]
+ENTRYPOINT ["/entrypoint.sh"]
