--- a/Dockerfile-debian.template
+++ b/Dockerfile-debian.template
@@ -66,6 +66,8 @@ RUN set -eux; \
 		certbot \
 		git \
 		librsvg2-bin \
+		ghostscript \
+		poppler-utils \
 		imagemagick \
 		# Required for SyntaxHighlighting
 		python3 \
