--- a/Dockerfile-debian.template
+++ b/Dockerfile-debian.template
@@ -96,6 +96,7 @@ RUN set -eux; \
 		mysqli \
 		opcache \
 		zip \
+		calendar \
 	; \
 	\
 	pecl install APCu-%%APCU_VERSION%%; \
@@ -182,7 +183,8 @@ RUN set -eux; \
 	&& /install/bin/extension.sh DataTable2 extensions \
 	&& /install/bin/extension.sh DynamicPageList targz https://github.com/Universal-Omega/DynamicPageList3/archive/refs/tags/3.3.7.tar.gz \
 	&& /install/bin/extension.sh Widgets extensions \
-	&& /install/bin/extension.sh IFrameTag composer mediawiki/iframe-tag
+	&& /install/bin/extension.sh IFrameTag composer mediawiki/iframe-tag \
+	&& /install/bin/extension.sh Drafts extensions  
 
 COPY --chown=www-data:www-data overlay/common/www-data/ /
 
